Adding a lot more javascript scroll to these pages

--- a/Services/conference-service.html
+++ b/Services/conference-service.html
@@ -689,13 +689,13 @@
                 </p>
                 <div class="mt-8 space-y-6">
                   <details
-                    class="group bg-white dark:bg-slate-800 p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm"
-                    open=""
+                    class="group bg-white dark:bg-slate-800 p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm scroll-item"
+                    
                   >
                     <summary
                       class="flex justify-between items-center cursor-pointer list-none"
                     >
-                      <span class="font-bold text-lg text-primary"
+                      <span class="font-bold text-lg text-primary font-display"
                         >Reliability &amp; Support</span
                       >
                       <span
@@ -719,12 +719,12 @@
                     </div>
                   </details>
                   <details
-                    class="group bg-white dark:bg-slate-800 p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm"
+                    class="group bg-white dark:bg-slate-800 p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm scroll-item"
                   >
                     <summary
                       class="flex justify-between items-center cursor-pointer list-none"
                     >
-                      <span class="font-bold text-lg text-primary"
+                      <span class="font-bold text-lg text-primary font-display"
                         >Cost &amp; Scalability</span
                       >
                       <span
@@ -748,12 +748,12 @@
                     </div>
                   </details>
                   <details
-                    class="group bg-white dark:bg-slate-800 p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm"
+                    class="group bg-white dark:bg-slate-800 p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm scroll-item"
                   >
                     <summary
                       class="flex justify-between items-center cursor-pointer list-none"
                     >
-                      <span class="font-bold text-lg text-primary"
+                      <span class="font-bold text-lg text-primary font-display"
                         >User Experience</span
                       >
                       <span
@@ -778,7 +778,7 @@
                   </details>
                 </div>
               </div>
-              <div class="relative rounded-xl overflow-hidden shadow-2xl">
+              <div class="relative rounded-xl overflow-hidden shadow-2xl scroll-item-right">
                 <img
                   alt="Modern conference room with a large screen and organized seating"
                   class="w-full h-full object-cover"
@@ -806,7 +806,7 @@
           <div class="container mx-auto px-6">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
               <div
-                class="bg-black text-white p-8 md:p-12 rounded-xl border border-accent/50 shadow-xl"
+                class="bg-black text-white p-8 md:p-12 rounded-xl border border-accent/50 shadow-xl scroll-item"
               >
                 <h3 class="text-3xl font-bold font-display">
                   ROI Calculator for Upgrades
@@ -871,7 +871,7 @@
                 </p>
                 <div class="mt-8 space-y-4">
                   <div
-                    class="bg-surface-light dark:bg-surface-dark p-4 rounded-lg border border-slate-200 dark:border-slate-700 flex items-start gap-4"
+                    class="bg-surface-light dark:bg-surface-dark p-4 rounded-lg border border-slate-200 dark:border-slate-700 flex items-start gap-4 scroll-item-right"
                   >
                     <span
                       class="material-symbols-outlined text-primary text-3xl mt-1"
@@ -891,7 +891,7 @@
                     </div>
                   </div>
                   <div
-                    class="bg-surface-light dark:bg-surface-dark p-4 rounded-lg border border-slate-200 dark:border-slate-700 flex items-start gap-4"
+                    class="bg-surface-light dark:bg-surface-dark p-4 rounded-lg border border-slate-200 dark:border-slate-700 flex items-start gap-4 scroll-item-right"
                   >
                     <span
                       class="material-symbols-outlined text-primary text-3xl mt-1"
@@ -911,7 +911,7 @@
                     </div>
                   </div>
                   <div
-                    class="bg-surface-light dark:bg-surface-dark p-4 rounded-lg border border-slate-200 dark:border-slate-700 flex items-start gap-4"
+                    class="bg-surface-light dark:bg-surface-dark p-4 rounded-lg border border-slate-200 dark:border-slate-700 flex items-start gap-4 scroll-item-right"
                   >
                     <span
                       class="material-symbols-outlined text-primary text-3xl mt-1"
@@ -931,7 +931,7 @@
                     </div>
                   </div>
                   <a
-                    class="!mt-6 inline-block w-full text-center bg-primary/10 text-primary dark:bg-primary/20 dark:text-white font-medium py-3 px-6 rounded-lg hover:bg-primary/20 transition-colors font-display"
+                    class="!mt-6 inline-block w-full text-center bg-primary/10 text-primary dark:bg-primary/20 dark:text-white font-medium py-3 px-6 rounded-lg hover:bg-primary/20 transition-colors font-display scroll-item-right"
                     href="#"
                     >Start a Room Configuration</a
                   >
