--- a/Services/it-management.html
+++ b/Services/it-management.html
@@ -65,8 +65,8 @@
       <div class="py-1 text-center">
         <a href="./managed-cybersecurity.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Managed Cybersecurity</a>
         <a href="./penetration-test.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Penetration Testing</a>
-        <a href="./Services/it-support.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Support</a>
-        <a href="./Services/it-management.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Management</a>
+        <a href="./it-support.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Support</a>
+        <a href="./it-management.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Management</a>
 
         <a href="./co-managed-it.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Co-Managed IT</a>
         <a href="./bdr.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Backup & Recovery</a>
@@ -577,7 +577,7 @@
                 that fuels efficiency and innovation.
               </p>
             </div>
-            <div class="mt-16 grid lg:grid-cols-3 gap-8">
+            <div class="mt-16 grid lg:grid-cols-3 gap-8 scroll-item">
               <div
                 class="bg-surface-light dark:bg-surface-dark p-8 rounded-xl border border-slate-200 dark:border-slate-700 transform hover:-translate-y-2 transition-transform duration-300"
               >
@@ -724,15 +724,15 @@
                 </p>
                 <div class="mt-8 space-y-4">
                   <details
-                    class="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700"
-                    open=""
+                    class="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 scroll-item"
+                    
                   >
                     <summary
                       class="font-bold text-lg font-display text-slate-800 dark:text-white flex justify-between items-center cursor-pointer"
                     >
                       Seamless Integration
                       <span class="material-symbols-outlined text-primary"
-                        >expand_less</span
+                        >expand_more</span
                       >
                     </summary>
                     <p class="mt-2 text-slate-600 dark:text-slate-400">
@@ -743,7 +743,7 @@
                     </p>
                   </details>
                   <details
-                    class="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700"
+                    class="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 scroll-item"
                   >
                     <summary
                       class="font-bold text-lg font-display text-slate-800 dark:text-white flex justify-between items-center cursor-pointer"
@@ -761,7 +761,7 @@
                     </p>
                   </details>
                   <details
-                    class="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700"
+                    class="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 scroll-item"
                   >
                     <summary
                       class="font-bold text-lg font-display text-slate-800 dark:text-white flex justify-between items-center cursor-pointer"
@@ -781,7 +781,7 @@
                 </div>
               </div>
               <div
-                class="bg-accent text-white p-8 rounded-xl border border-accent/50 shadow-xl bg-black"
+                class="bg-accent text-white p-8 rounded-xl border border-accent/50 shadow-xl bg-black scroll-item-right"
               >
                 <h3 class="text-2xl font-bold font-display">
                   Ready to build a more resilient IT foundation?
