--- a/Services/managed-print.html
+++ b/Services/managed-print.html
@@ -679,7 +679,7 @@
         
         <div
           id="content-cost" 
-          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-lg border border-gray-200 solution-content 
+          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-xl border border-gray-200 solution-content 
                  transition-all duration-500 ease-in-out opacity-100 translate-x-0"
         >
 
@@ -787,7 +787,7 @@
 
         <div
           id="content-security" 
-          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-lg border border-gray-200 solution-content 
+          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-xl border border-gray-200 solution-content 
                  transition-all duration-500 ease-in-out hidden opacity-0 translate-x-full"
         >
 
@@ -895,7 +895,7 @@
 
         <div
           id="content-maintenance" 
-          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-lg border border-gray-200 solution-content 
+          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-xl border border-gray-200 solution-content 
                  transition-all duration-500 ease-in-out hidden opacity-0 translate-x-full"
         >
            <div class="flex flex-col gap-6">
@@ -998,7 +998,7 @@
       
         <div
           id="content-eco" 
-          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-lg border border-gray-200 solution-content 
+          class="absolute top-0 left-0 w-full bg-white p-8 rounded-xl shadow-xl border border-gray-200 solution-content 
                  transition-all duration-500 ease-in-out hidden opacity-0 translate-x-full"
         >
            <div class="flex flex-col gap-6">
