--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
       <h2 class="text-3xl md:text-4xl font-bold font-display text-slate-900 dark:text-white">What Our Clients Say</h2>
       <p class="mt-4 max-w-2xl mx-auto text-slate-600 dark:text-slate-400">Real stories from businesses we've helped reach their peak performance.</p>
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 ">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 scroll-item">
       <div class="bg-white dark:bg-slate-800 p-8 rounded-xl border border-slate-200 shadow-sm">
       <p class="text-slate-600">"Partnering with Summit IT Solutions was a game-changer for our security posture. Their proactive approach and expert team give us the confidence to focus on our business, knowing our data is protected around the clock."</p>
         <div class="mt-6 flex items-center">
@@ -712,7 +712,7 @@
       <h2 class="text-3xl md:text-4xl font-bold font-display text-slate-900 dark:text-white">Latest News &amp; Insights</h2>
       <p class="mt-4 max-w-2xl mx-auto text-slate-600 dark:text-slate-400">Stay informed with the latest trends in IT and cybersecurity.</p>
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 scroll-item-right">
       <div class="bg-slate-50 dark:bg-slate-800/50 rounded-xl overflow-hidden group">
         <div class="h-48 bg-slate-300 dark:bg-slate-700"></div>
         <div class="p-6">
