--- a/Services/bdr.html
+++ b/Services/bdr.html
@@ -588,8 +588,8 @@
         <p class="mt-4 text-lg text-white dark:text-slate-400">Our Backup &amp; Disaster Recovery (BDR) service is an end-to-end solution, meticulously designed to protect your data at every layer and ensure a swift, seamless recovery when you need it most.</p>
       </div>
       <div class="mt-16 grid lg:grid-cols-2 gap-8 items-start">
-        <div class="space-y-4">
-        <details class="group bg-background-light dark:bg-surface-dark p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm hover:shadow-lg transition-shadow" open="">
+        <div class="space-y-4 scroll-item">
+        <details class="group bg-background-light dark:bg-surface-dark p-6 rounded-lg border border-slate-200 dark:border-slate-700 shadow-sm hover:shadow-lg transition-shadow">
           <summary class="flex items-center justify-between cursor-pointer">
             <h4 class="text-lg font-bold font-display text-slate-900 dark:text-white">Automated Backup: Continuous Protection</h4>
             <span class="material-symbols-outlined text-slate-500 dark:text-slate-400">expand_more</span>
@@ -611,7 +611,7 @@
           <p class="mt-4 text-slate-600 dark:text-slate-400">If your physical office is inaccessible due to fire, flood, or other disaster, we spin up your entire server environment in our secure cloud data center. Your business stays online, accessible from anywhere.</p>
         </details>
       </div>
-      <div class="sticky top-28 bg-white dark:bg-slate-800 p-8 rounded-xl border border-slate-200 dark:border-slate-700 shadow-xl">
+      <div class="sticky top-28 bg-white dark:bg-slate-800 p-8 rounded-xl border border-slate-200 dark:border-slate-700 shadow-xl scroll-item-right">
         <h3 class="text-xl font-bold font-display text-primary">What's Your Recovery Time Objective?</h3>
         <p class="mt-3 text-slate-600 dark:text-slate-400">The most critical question in disaster recovery. We work with you to define clear RTOs and RPOs (Recovery Point Objectives) to build a plan that meets your specific business needs.</p>
         <ul class="mt-4 space-y-3">
