--- a/Services/managed-cybersecurity.html
+++ b/Services/managed-cybersecurity.html
@@ -537,7 +537,7 @@
                     Checking boxes for compliance doesn't guarantee security. True protection requires a proactive, multi-layered strategy. We go beyond the basics to build a resilient security posture that anticipates threats, not just reacts to them.
           </p>
       </div>
-      <div class="mt-16 grid lg:grid-cols-3 gap-8">
+      <div class="mt-16 grid lg:grid-cols-3 gap-8 scroll-item">
         <div class="text-center bg-surface-light dark:bg-surface-dark p-8 rounded-xl border border-slate-200 dark:border-slate-700 transition-all duration-300 hover:shadow-2xl hover:-translate-y-2">
           <div class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-primary/10 mb-6">
             <span class="material-symbols-outlined text-primary text-4xl">shield_with_heart</span>
@@ -693,7 +693,7 @@
         <h2 class="text-3xl md:text-4xl font-bold font-display text-slate-900 dark:text-white">More Than a Service, It's a Partnership</h2>
         <p class="mt-4 text-lg text-slate-600 dark:text-slate-400">Our managed cybersecurity program is built on a foundation of trust, transparency, and a deep commitment to your business's success and security.</p>
       </div>
-      <div class="mt-16 grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div class="mt-16 grid md:grid-cols-2 lg:grid-cols-4 gap-8 scroll-item-right">
         <div class="bg-surface-light dark:bg-surface-dark p-6 rounded-lg border border-slate-200 dark:border-slate-700">
           <span class="material-symbols-outlined text-primary text-3xl">trending_up</span>
           <h5 class="mt-4 font-bold text-slate-800 dark:text-white">Improve Security Maturity</h5>
