Some more JavaScript implemented

--- a/Services/conference-service.html
+++ b/Services/conference-service.html
@@ -564,13 +564,13 @@
               class="mt-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-center"
             >
               <div
-                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center"
+                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center scroll-item"
               >
                 <span class="material-symbols-outlined text-accent text-5xl"
                   >cable</span
                 >
                 <p
-                  class="mt-4 font-semibold text-slate-700 dark:text-slate-300"
+                  class="mt-4 font-bold text-slate-700 dark:text-slate-300 font-display"
                 >
                   Seamless Integration
                 </p>
@@ -579,13 +579,13 @@
                 </p>
               </div>
               <div
-                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center"
+                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center scroll-item"
               >
                 <span class="material-symbols-outlined text-accent text-5xl"
                   >touch_app</span
                 >
                 <p
-                  class="mt-4 font-semibold text-slate-700 dark:text-slate-300"
+                  class="mt-4 font-bold text-slate-700 dark:text-slate-300 font-display"
                 >
                   Ease of Use
                 </p>
@@ -595,13 +595,13 @@
                 </p>
               </div>
               <div
-                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center"
+                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center scroll-item-right"
               >
                 <span class="material-symbols-outlined text-accent text-5xl"
                   >monitoring</span
                 >
                 <p
-                  class="mt-4 font-semibold text-slate-700 dark:text-slate-300"
+                  class="mt-4 font-bold text-slate-700 dark:text-slate-300 font-display"
                 >
                   Proactive Monitoring
                 </p>
@@ -610,13 +610,13 @@
                 </p>
               </div>
               <div
-                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center"
+                class="bg-surface-light dark:bg-surface-dark p-6 rounded-xl border border-slate-200 dark:border-slate-800 flex flex-col items-center scroll-item-right"
               >
                 <span class="material-symbols-outlined text-accent text-5xl"
                   >stairs</span
                 >
                 <p
-                  class="mt-4 font-semibold text-slate-700 dark:text-slate-300"
+                  class="mt-4 font-bold text-slate-700 dark:text-slate-300 font-display"
                 >
                   Scalable Solutions
                 </p>
