Fixing some broken links not displaying properly

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                         <p class="leading-[3] text-xl"><span class="font-semibold"> Business Hours:</span> Monday - Friday 8:00 AM - 5:00 PM</p>
                         <p class="leading-[3] text-xl"><span class="font-semibold"> Email:</span> customercare@summitsecureit.com</p>
                         <p class="leading-[3] text-xl"><span class="font-semibold">Address:</span> 500 Enterprise Dr, Edmond, OK 73013</p>
-                        <img src="../asset/gears_00000.gif" width="100%" height="100%" alt="Summit IT Gears">
+                        <img src="./asset/gears_00000.gif" width="100%" height="100%" alt="Summit IT Gears">
                     </div>
                 </div>
         </section>
@@ -810,7 +810,7 @@
                 <img
                   alt="Summit IT Solutions Logo"
                   class="w-40 h-20"
-                  src="../asset/SITS logo.png"
+                  src="./asset/SITS logo.png"
                 />
               </a>
               <p class="mt-4 text-sm text-white dark:text-slate-400">
